# Python

./: .gitignore  BigO_Explanation.md  InputOutput.ipynb  List.ipynb  Pydantic.ipynb  README.md  ado_birthday.ipynb  args_kwargs.ipynb  collections_abc.ipynb  example.ipynb  lambda.ipynb  networking.ipynb  operator_module.ipynb  pyproject.toml  python.ipynb  sequence.ipynb  time_module.ipynb  yakthung_speech.ipynb
Basic/: scope_namespaces.py
Basic/Unit_Test/: employee.py  test_calc.py
Basic/built_in_function/: built_in_function.ipynb
Basic/circular_import/: main.py  readme.txt
Basic/class/: class.ipynb  name_mangling.py  readme.txt  test_name_mangling.py
Basic/control_flow_tools/: break_continue.py
Basic/data_structure/: binary_search.py
Basic/decorator/: README.md  auth_log_decorator.py  decorator.py  decorator_register.py  decorator_without_wraps.py  users.db
Basic/dunder_method/: counter.py  inventory_item.py
Basic/functools/: cache_lru_cache.ipynb  partial_reduce_wraps.ipynb
Basic/import_from_statement/: alias_import.py  all_import.py  basic_import.py  from_import.py  package_import.py  relative_import.py
Basic/pytest_tutorial/: README.md  pyproject.toml  pytest_features.md
Basic/pytest_tutorial/src/: calc.py
Basic/pytest_tutorial/tests/: test_calc.py  test_employee.py
Libraries/: lib_pipe.py
Standard Library Builtins/: readme.md
Tips/: calender.ipynb  day_of_week.py  even_numbers.py  for_comprehension_filter_map.ipynb  get_day_name.py  series.ipynb
dynamic_programming/: README.md  dynamic_programming.ipynb
gil_jit/: README.md  gil.py
(+52 files in other folders)
